# NPUKernelBench

./: .gitignore  README.md  README.zh-CN.md  base_config.yaml  requirements.txt  run_multi_test.py  set_framework_env.sh  start_vllm_server.sh
libs/common_include/msopgen/validation/: CMakeLists.txt  pytorch_npu_helper.hpp
tasks/level1/Comparison/Less/answer/0/: CMakeLists.txt
tasks/level1/Comparison/Less/answer/0/op_host/: less.cpp  less_tiling.h
tasks/level1/Comparison/Less/answer/0/op_kernel/: less.cpp
tasks/level1/Condition/IsInf/answer/0/: CMakeLists.txt
tasks/level1/Condition/IsInf/answer/0/op_host/: is_inf.cpp  is_inf_def.cpp  is_inf_tiling.h
tasks/level1/Condition/IsInf/answer/0/op_kernel/: is_inf.cpp  is_inf.h
tasks/level1/Index/GatherV3/answer/0/: CMakeLists.txt
tasks/level1/Index/GatherV3/answer/0/framework/: CMakeLists.txt
tasks/level1/Index/GatherV3/answer/0/op_host/: aclnn_index_select.cpp  aclnn_index_select.h  gather_v2.h  gather_v3.cpp  gather_v3_def.cpp  gather_v3_l0.cpp  gather_v3_l0.h  gather_v3_tiling.h  unsqueeze.h
tasks/level1/Index/GatherV3/answer/0/op_kernel/: gather_v3.cpp  gather_v3_base.h  gather_v3_tmpl_0.h  gather_v3_tmpl_1.h  gather_v3_tmpl_2.h  gather_v3_tmpl_3.h
tasks/level1/Index/ScatterList/answer/0/: CMakeLists.txt
tasks/level1/Index/ScatterList/answer/0/op_host/: scatter_list.cpp  scatter_list_def.cpp  scatter_list_tiling.h
tasks/level1/Index/ScatterList/answer/0/op_kernel/: scatter_list.cpp  scatter_list_base.h  scatter_list_neg_dim2_large.h  scatter_list_neg_large.h  scatter_list_neg_large_e.h  scatter_list_neg_more.h  scatter_list_neg_small.h  scatter_list_rlble.h  scatter_list_rlble_pad.h  scatter_list_rlbse.h  scatter_list_rlbse_pad.h  scatter_list_rsble.h  scatter_list_rsbse.h  scatter_list_transpose_large.h  scatter_list_transpose_more.h  scatter_list_transpose_small.h
tasks/level1/Math/AbsMath/answer/0/: CMakeLists.txt
tasks/level1/Math/AbsMath/answer/0/op_host/: abs_math.cpp  abs_tiling.h
tasks/level1/Math/AbsMath/answer/0/op_kernel/: abs_common.h  abs_complex64.h  abs_float32.h  abs_int32.h  abs_int64.h  abs_math.cpp
tasks/level1/Math/ComplexMatDot/answer/0/: CMakeLists.txt
tasks/level1/Math/ComplexMatDot/answer/0/op_host/: complex_mat_dot.cpp  complex_mat_dot_tiling.h
tasks/level1/Math/ComplexMatDot/answer/0/op_kernel/: complex_mat_dot.cpp  complex_mat_dot_aiv.h
tasks/level1/Math/CosMath/answer/0/: CMakeLists.txt
tasks/level1/Math/CosMath/answer/0/op_host/: cos_math.cpp  cos_tiling.h
tasks/level1/Math/CosMath/answer/0/op_kernel/: cos_math.cpp
tasks/level1/Math/Icamax/answer/0/: CMakeLists.txt
tasks/level1/Math/Icamax/answer/0/op_host/: icamax.cpp  icamax_tiling.h
tasks/level1/Math/Icamax/answer/0/op_kernel/: icamax.cpp  icamax_aiv.h
tasks/level1/Math/Isamax/answer/0/: CMakeLists.txt
tasks/level1/Math/Isamax/answer/0/op_host/: isamax.cpp  isamax_tiling.h
tasks/level1/Math/Isamax/answer/0/op_kernel/: isamax.cpp  isamax_aiv.h
tasks/level1/Math/Snrm2/answer/0/: CMakeLists.txt
tasks/level1/Math/Snrm2/answer/0/op_host/: snrm2.cpp  snrm2_tiling.h
tasks/level1/Math/Snrm2/answer/0/op_kernel/: snrm2.cpp  snrm2_aiv.h
tasks/level1/Math/TanhMath/answer/0/: CMakeLists.txt
tasks/level1/Math/TanhMath/answer/0/op_host/: tanh_math.cpp  tanh_math_tiling.h
tasks/level1/Math/TanhMath/answer/0/op_kernel/: tanh_math.cpp
tasks/level1/TensorCreation/Fill/answer/0/: CMakeLists.txt
tasks/level1/TensorCreation/Fill/answer/0/op_host/: fill.cpp  fill_tiling.h
tasks/level1/TensorCreation/Fill/answer/0/op_kernel/: fill.cpp
tasks/level2/Activation/DequantSwigluQuant/answer/0/: CMakeLists.txt
tasks/level2/Activation/DequantSwigluQuant/answer/0/op_host/: dequant_swiglu_quant.cpp  dequant_swiglu_quant_def.cpp  dequant_swiglu_quant_tiling.h  dequant_swiglu_quant_tiling_base.cpp
tasks/level2/Activation/DequantSwigluQuant/answer/0/op_kernel/: dequant_swiglu_quant.cpp  dequant_swiglu_quant.h  dequant_swiglu_quant_dynamic_base.hpp  dequant_swiglu_quant_dynamic_bf16.hpp  dequant_swiglu_quant_dynamic_bias_float.hpp  dequant_swiglu_quant_dynamic_bias_int32.hpp  dequant_swiglu_quant_static_base.hpp  dequant_swiglu_quant_static_bf16.hpp  dequant_swiglu_quant_static_bias_float.hpp  dequant_swiglu_quant_static_bias_int32.hpp
tasks/level2/Activation/GeGluV2/answer/0/: CMakeLists.txt
tasks/level2/Activation/GeGluV2/answer/0/op_host/: ge_glu_v2.cpp  ge_glu_v2_def.cpp  ge_glu_v2_l0.cpp  ge_glu_v2_l0.h  ge_glu_v2_proto.cpp  ge_glu_v2_tiling.h
tasks/level2/Activation/GeGluV2/answer/0/op_kernel/: ge_glu_v2.cpp  ge_glu_v2_base.h  ge_glu_v2_base_310p.h  ge_glu_v2_fp16_align_last_axis_big_without_pad.h  ge_glu_v2_fp16_stride_310p.h  ge_glu_v2_fp32_align_last_axis_big_without_pad.h  ge_glu_v2_fp32_stride_310p.h
tasks/level2/Activation/GeluGrad/answer/0/: CMakeLists.txt
tasks/level2/Activation/GeluGrad/answer/0/op_host/: gelu_grad.cpp  gelu_grad_tiling.h
tasks/level2/Activation/GeluGrad/answer/0/op_kernel/: gelu_grad.cpp
tasks/level2/Activation/GeluQuant/answer/0/: CMakeLists.txt
tasks/level2/Activation/GeluQuant/answer/0/op_host/: gelu_quant.cpp  gelu_quant_def.cpp  gelu_quant_tiling.h  gelu_quant_tiling_base.h  gelu_quant_tiling_def.h
tasks/level2/Activation/GeluQuant/answer/0/op_kernel/: gelu_dynamic_quant.h  gelu_dynamic_quant_workspace.h  gelu_quant.cpp  gelu_quant_base.h  gelu_static_quant.h  gelu_static_quant_block.h  gelu_static_quant_per_tensor.h
tasks/level2/Loss/MseLossGradV2/answer/0/: CMakeLists.txt
tasks/level2/Loss/MseLossGradV2/answer/0/op_host/: aclnn_mse_loss_backward.cpp  aclnn_mse_loss_backward.h  mse_loss_grad.cpp  mse_loss_grad.h  mse_loss_grad_v2_def.cpp  (+3 more)
tasks/level2/Mask/MaskedSelectV3/answer/0/: CMakeLists.txt
tasks/level2/Norm/InplaceAddLayerNorm/answer/0/: CMakeLists.txt
tasks/level2/Norm/LayerNormV4/answer/0/: CMakeLists.txt
tasks/level2/Norm/RmsNorm/answer/0/: CMakeLists.txt
tasks/level2/Norm/RmsNormGrad/answer/0/: CMakeLists.txt
tasks/level2/Optim/ApplyFusedEmaAdam/answer/0/: CMakeLists.txt
tasks/level3/Sort/TopKV3/answer/0/: CMakeLists.txt
(+1886 files in other folders)
